[gd_scene load_steps=4 format=3 uid="uid://dgqwr0fbkpx5x"]

[ext_resource type="Theme" uid="uid://cypnnlojt3rfg" path="res://ui/battle_preparation/unit_detailed_info/unit_detailed_info.tres" id="1_oo1qq"]
[ext_resource type="Script" path="res://ui/battle_prep_new/shop/shop_container/shop_container.gd" id="2_4kdwl"]
[ext_resource type="PackedScene" uid="uid://bp0ajjfrcs2dv" path="res://ui/battle_prep_new/shop/shop_container/tab_icon/tab_icon.tscn" id="3_mn3eq"]

[node name="ShopContainer" type="VBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_oo1qq")
script = ExtResource("2_4kdwl")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_direction = 3
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(300, 32)
layout_direction = 2
layout_mode = 2

[node name="TabScrollContainer" type="ScrollContainer" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(302, 32)
layout_mode = 2
follow_focus = true

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/TabScrollContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="SwordTabIcon" parent="HBoxContainer/VBoxContainer/TabScrollContainer/HBoxContainer" instance=ExtResource("3_mn3eq")]
layout_mode = 2

[node name="AxeTabIcon" parent="HBoxContainer/VBoxContainer/TabScrollContainer/HBoxContainer" instance=ExtResource("3_mn3eq")]
layout_mode = 2

[node name="LanceTabIcon" parent="HBoxContainer/VBoxContainer/TabScrollContainer/HBoxContainer" instance=ExtResource("3_mn3eq")]
layout_mode = 2

[node name="BowTabIcon" parent="HBoxContainer/VBoxContainer/TabScrollContainer/HBoxContainer" instance=ExtResource("3_mn3eq")]
layout_mode = 2

[node name="FistTabIcon" parent="HBoxContainer/VBoxContainer/TabScrollContainer/HBoxContainer" instance=ExtResource("3_mn3eq")]
layout_mode = 2

[node name="StaffTabIcon" parent="HBoxContainer/VBoxContainer/TabScrollContainer/HBoxContainer" instance=ExtResource("3_mn3eq")]
layout_mode = 2

[node name="DarkTabIcon" parent="HBoxContainer/VBoxContainer/TabScrollContainer/HBoxContainer" instance=ExtResource("3_mn3eq")]
layout_mode = 2

[node name="LightTabIcon" parent="HBoxContainer/VBoxContainer/TabScrollContainer/HBoxContainer" instance=ExtResource("3_mn3eq")]
layout_mode = 2

[node name="NatureTabIcon" parent="HBoxContainer/VBoxContainer/TabScrollContainer/HBoxContainer" instance=ExtResource("3_mn3eq")]
layout_mode = 2

[node name="AnimalTabIcon" parent="HBoxContainer/VBoxContainer/TabScrollContainer/HBoxContainer" instance=ExtResource("3_mn3eq")]
visible = false
layout_mode = 2

[node name="MonsterTabIcon" parent="HBoxContainer/VBoxContainer/TabScrollContainer/HBoxContainer" instance=ExtResource("3_mn3eq")]
visible = false
layout_mode = 2

[node name="ShieldTabIcon" parent="HBoxContainer/VBoxContainer/TabScrollContainer/HBoxContainer" instance=ExtResource("3_mn3eq")]
layout_mode = 2

[node name="DaggerTabIcon" parent="HBoxContainer/VBoxContainer/TabScrollContainer/HBoxContainer" instance=ExtResource("3_mn3eq")]
layout_mode = 2

[node name="BannerTabIcon" parent="HBoxContainer/VBoxContainer/TabScrollContainer/HBoxContainer" instance=ExtResource("3_mn3eq")]
visible = false
layout_mode = 2

[node name="ItemTabIcon" parent="HBoxContainer/VBoxContainer/TabScrollContainer/HBoxContainer" instance=ExtResource("3_mn3eq")]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 10

[node name="ShopScrollContainer" type="ScrollContainer" parent="HBoxContainer/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(302, 362)
layout_mode = 2
follow_focus = true

[node name="MainShopInventoryContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/MarginContainer/ShopScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="tab_switch" from="HBoxContainer/VBoxContainer/TabScrollContainer/HBoxContainer/SwordTabIcon" to="." method="_on_tab_icon_switch"]
[connection signal="tab_switch" from="HBoxContainer/VBoxContainer/TabScrollContainer/HBoxContainer/AxeTabIcon" to="." method="_on_tab_icon_switch"]
[connection signal="tab_switch" from="HBoxContainer/VBoxContainer/TabScrollContainer/HBoxContainer/LanceTabIcon" to="." method="_on_tab_icon_switch"]
[connection signal="tab_switch" from="HBoxContainer/VBoxContainer/TabScrollContainer/HBoxContainer/BowTabIcon" to="." method="_on_tab_icon_switch"]
[connection signal="tab_switch" from="HBoxContainer/VBoxContainer/TabScrollContainer/HBoxContainer/FistTabIcon" to="." method="_on_tab_icon_switch"]
[connection signal="tab_switch" from="HBoxContainer/VBoxContainer/TabScrollContainer/HBoxContainer/StaffTabIcon" to="." method="_on_tab_icon_switch"]
[connection signal="tab_switch" from="HBoxContainer/VBoxContainer/TabScrollContainer/HBoxContainer/DarkTabIcon" to="." method="_on_tab_icon_switch"]
[connection signal="tab_switch" from="HBoxContainer/VBoxContainer/TabScrollContainer/HBoxContainer/LightTabIcon" to="." method="_on_tab_icon_switch"]
[connection signal="tab_switch" from="HBoxContainer/VBoxContainer/TabScrollContainer/HBoxContainer/NatureTabIcon" to="." method="_on_tab_icon_switch"]
[connection signal="tab_switch" from="HBoxContainer/VBoxContainer/TabScrollContainer/HBoxContainer/AnimalTabIcon" to="." method="_on_tab_icon_switch"]
[connection signal="tab_switch" from="HBoxContainer/VBoxContainer/TabScrollContainer/HBoxContainer/MonsterTabIcon" to="." method="_on_tab_icon_switch"]
[connection signal="tab_switch" from="HBoxContainer/VBoxContainer/TabScrollContainer/HBoxContainer/ShieldTabIcon" to="." method="_on_tab_icon_switch"]
[connection signal="tab_switch" from="HBoxContainer/VBoxContainer/TabScrollContainer/HBoxContainer/DaggerTabIcon" to="." method="_on_tab_icon_switch"]
[connection signal="tab_switch" from="HBoxContainer/VBoxContainer/TabScrollContainer/HBoxContainer/BannerTabIcon" to="." method="_on_tab_icon_switch"]
[connection signal="tab_switch" from="HBoxContainer/VBoxContainer/TabScrollContainer/HBoxContainer/ItemTabIcon" to="." method="_on_tab_icon_switch"]
